adicionando um detalhe

--- a/Jogo_da_velha.html
+++ b/Jogo_da_velha.html
@@ -63,8 +63,8 @@
                 if (box.innerHTML === '') {
                     box.innerHTML = jogadorAtual
                     jogo[i] = jogadorAtual
-                    trocarTurno()
-                    console.log(jogo);   
+                    checarVencedor()
+                    trocarTurno() 
                 }
             })    
         }
