--- a/Jogo_da_velha.html
+++ b/Jogo_da_velha.html
@@ -11,8 +11,6 @@
     <h1 class='titulo'>
         Jogo Da Velha
     </h1>
-
-    <p id="jogador"></p>
   
     <div class='pai'>
         <div class='boxes'></div>
@@ -64,12 +62,6 @@
             color: white;
         }
 
-        #jogador{
-            text-align: center;
-            font-size: 25px;
-            color: white;
-        }
-
         .botao{
             text-align: center;
         }
@@ -77,12 +69,9 @@
     <script>
         let jogo = ['','','','','','','','']
         let texto = document.getElementById('texto')
-        let jogador = document.getElementById('jogador')
         let contador = 0
         let boxes = document.getElementsByClassName('boxes')
         let jogadorAtual = 'X'
-
-        jogador.innerHTML = 'Vez do jogador X'
 
         reset.addEventListener('click', function () {
             for (let i = 0; i < boxes.length; i++) {
@@ -92,28 +81,26 @@
                 jogo = [i]
                 if (texto.innerHTML === 'O jogador X ganhou' || texto.innerHTML === 'O jogador O ganhou' || texto.innerHTML === 'Empatou') {
                     texto.innerHTML = ''
-                } else if (jogador.innerHTML === 'Vez do jogador O' || jogador.innerHTML === 'Vez do jogador X') {
-                    jogador.innerHTML = 'Vez do jogador X'
-                }
+                } 
             }
         })
 
-        
         for (let i = 0; i < boxes.length; i++) {
             let box = boxes[i];
 
             box.addEventListener('click', function () {
                 if (box.innerHTML === '') {
-                    box.innerHTML = jogadorAtual
+                    if (texto.innerHTML === '') {
+                        box.innerHTML = jogadorAtual
                     jogo[i] = jogadorAtual
                     let alguemGanhou = checarVencedor()
-                    trocarTurno()
                     if (!alguemGanhou) {
                         empate()
+                    }      
                     }
+                    trocarTurno()
                 }
                 contador++
-                console.log(contador);
             })    
         }
 
@@ -133,71 +120,43 @@
             }
         }
 
+        function mesnsagemVencedor() {
+            texto.innerHTML = 'O jogador ' + jogadorAtual + ' ganhou'
+        }
+
         function checarVencedor() {
-            if (jogo[0] === 'X' && jogo[1] === 'X' && jogo[2] === 'X') {
-                texto.innerHTML = 'O jogador X ganhou'
+            if (jogo[0] === jogadorAtual && jogo[1] === jogadorAtual && jogo[2] === jogadorAtual) {
+                mesnsagemVencedor()
                 return true
 
-            } if (jogo[0] === 'O' && jogo[1] === 'O' && jogo[2] === 'O') {
-                texto.innerHTML = 'O jogador O ganhou'
+            } if (jogo[3] === jogadorAtual && jogo[4] === jogadorAtual && jogo[5] === jogadorAtual) {
+                mesnsagemVencedor()
                 return true
 
-            } if (jogo[3] === 'X' && jogo[4] === 'X' && jogo[5] === 'X') {
-                texto.innerHTML = 'O jogador X ganhou'
+            } if (jogo[6] === jogadorAtual && jogo[7] === jogadorAtual && jogo[8] === jogadorAtual) {
+                mesnsagemVencedor()
                 return true
 
-            } if (jogo[3] === 'O' && jogo[4] === 'O' && jogo[5] === 'O') {
-                texto.innerHTML = 'O jogador O ganhou'
+            } if (jogo[0] === jogadorAtual && jogo[3] === jogadorAtual && jogo[6] === jogadorAtual) {
+                mesnsagemVencedor()
                 return true
 
-            } if (jogo[6] === 'X' && jogo[7] === 'X' && jogo[8] === 'X') {
-                texto.innerHTML = 'O jogador X ganhou'
+            } if (jogo[1] === jogadorAtual && jogo[4] === jogadorAtual && jogo[7] === jogadorAtual) {
+                mesnsagemVencedor()
                 return true
 
-            } if (jogo[6] === 'O' && jogo[7] === 'O' && jogo[8] === 'O') {
-                texto.innerHTML = 'O jogador O ganhou'
+            } if (jogo[2] === jogadorAtual && jogo[5] === jogadorAtual && jogo[8] === jogadorAtual) {
+                mesnsagemVencedor()
                 return true
 
-            } if (jogo[0] === 'X' && jogo[3] === 'X' && jogo[6] === 'X') {
-                texto.innerHTML = 'O jogador X ganhou'
+            } if (jogo[0] === jogadorAtual && jogo[4] === jogadorAtual && jogo[8] === jogadorAtual) {
+                mesnsagemVencedor()
                 return true
 
-            } if (jogo[0] === 'O' && jogo[3] === 'O' && jogo[6] === 'O') {
-                texto.innerHTML = 'O jogador O ganhou'
+            } if (jogo[2] === jogadorAtual && jogo[4] === jogadorAtual && jogo[6] === jogadorAtual) {
+                mesnsagemVencedor()
                 return true
 
-            } if (jogo[1] === 'X' && jogo[4] === 'X' && jogo[7] === 'X') {
-                texto.innerHTML = 'O jogador X ganhou'
-                return true
-
-            } if (jogo[1] === 'O' && jogo[4] === 'O' && jogo[7] === 'O') {
-                texto.innerHTML = 'O jogador O ganhou'
-                return true
-
-            } if (jogo[2] === 'X' && jogo[5] === 'X' && jogo[8] === 'X') {
-                texto.innerHTML = 'O jogador X ganhou'
-                return true
-
-            } if (jogo[2] === 'O' && jogo[5] === 'O' && jogo[8] === 'O') {
-                texto.innerHTML = 'O jogador O ganhou'
-                return true
-
-            } if (jogo[0] === 'X' && jogo[4] === 'X' && jogo[8] === 'X') {
-                texto.innerHTML = 'O jogador X ganhou'
-                return true
-
-            } if (jogo[0] === 'O' && jogo[4] === 'O' && jogo[8] === 'O') {
-                texto.innerHTML = 'O jogador O ganhou'
-                return true
-
-            } if (jogo[2] === 'X' && jogo[4] === 'X' && jogo[6] === 'X') {
-                texto.innerHTML = 'O jogador X ganhou'
-                return true
-
-            } if (jogo[2] === 'O' && jogo[4] === 'O' && jogo[6] === 'O') {
-                texto.innerHTML = 'O jogador O ganhou'
-                return true
- 
             }
         }
 
